--- a/src/main/resources/templates/fragments/list.html
+++ b/src/main/resources/templates/fragments/list.html
@@ -6,9 +6,9 @@
 </head>
 
 <body>
-    <ul th:fragment="list(list, basePath)" class="list-group">
+    <ul th:fragment="list(list, basePath)" class="list-group" style="width: 15rem;">
         <li th:each="elem : ${list}" th:object="${elem}" class="list-group-item">
-            <a th:href="@{${basePath}/{id}(id=*{id})}" th:text="*{name}"></a>
+            <a th:href="@{|${basePath}/*{id}|}" th:text="*{name}"></a>
         </li>
     </ul>
 </body>
