feat: add title to home page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,6 +10,8 @@
 
 <body>
     <header th:insert="~{fragments/navbar :: navbar('Pizzeria', '/', 'Home', '/', 'Pizzas', '/pizzas')}"></header>
+
+    <h1 class="text-center mt-3">Welcome to our PIZZERIA</h1>
 </body>
 
 </html>
