feat: change navbar fragment paramenter

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header th:insert="~{fragments/navbar :: navbar('Pizzeria', '/', 'Home', '/', 'Pizzas', '/pizzas')}"></header>
+    <header th:insert="~{fragments/navbar :: navbar}"></header>
 
     <h1 class="text-center mt-3">Welcome to our PIZZERIA</h1>
 </body>
