--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -7,17 +7,16 @@
 
 <body>
     <!-- navbar -->
-    <nav th:fragment="navbar(homeName, homePath, pathName1, pathLink1, pathName2, pathLink2)"
-        class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav th:fragment="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{${homePath}}">[[${homeName}]]</a>
+            <a class="navbar-brand" th:href="@{/}">Pizzeria</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{${pathLink1}}">[[${pathName1}]]</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{${pathLink2}}">[[${pathName2}]]</a>
+                        <a class="nav-link" th:href="@{/pizzas}">Pizzas</a>
                     </li>
                 </ul>
             </div>
