--- a/src/main/resources/templates/pizzas/index.html
+++ b/src/main/resources/templates/pizzas/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header th:insert="~{fragments/navbar :: navbar('Pizzeria', '/', 'Home', '/', 'Pizzas', '/pizzas')}"></header>
+    <header th:insert="~{fragments/navbar :: navbar}"></header>
 
     <h1 class="text-center">Pizzas List</h1>
 
